fix node purge process log messages and status display